update names in build packages

--- a/apps/Didacti-coop_gui/CMakeLists.txt
+++ b/apps/Didacti-coop_gui/CMakeLists.txt
@@ -7,7 +7,7 @@
 #  | Released under GNU GPL License.                                           |
 #  +---------------------------------------------------------------------------+ 
 
-project(Didacti-coop_gui)
+project(Galileo)
 
 # --------------------------------------
 #  set variables for compilation 
